Basic Frame Layout
Added the basic frame layout. This works from one large window with two children. The left panel is currently always 1/3 of the total window width. The second panel just takes up the rest of the available amount.

Added Open Sans font and created custom build commands to copy fonts into the necessary output directories.

--- a/src/Dear ImGallery/Dear ImGallery.vcxproj
+++ b/src/Dear ImGallery/Dear ImGallery.vcxproj
@@ -114,6 +114,9 @@
       <AdditionalLibraryDirectories>$(SolutionDir)vendor\GLFW\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>xcopy /S /I /Y "$(SolutionDir)vendor\fonts\Include" "$(ProjectDir)fonts\" &amp;&amp; xcopy /S /I /Y "$(SolutionDir)vendor\fonts\Include" "$(OutDir)fonts\"</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -135,6 +138,9 @@
       <AdditionalLibraryDirectories>$(SolutionDir)vendor\GLFW\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>xcopy /S /I /Y "$(SolutionDir)vendor\fonts\Include" "$(ProjectDir)fonts\" &amp;&amp; xcopy /S /I /Y "$(SolutionDir)vendor\fonts\Include" "$(OutDir)fonts\"</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\vendor\Glad\glad.c" />
