Added 3 button entries
Added 3 entries to the button page. Added dark mode check box. Added control utilities: DisplayBox and Dropdown. Dropdown is used to view source code, and DisplayBox draws a padded border around the last control.

--- a/src/Dear ImGallery/Dear ImGallery.vcxproj
+++ b/src/Dear ImGallery/Dear ImGallery.vcxproj
@@ -158,7 +158,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Controls\Control.h" />
+    <ClInclude Include="Controls\DisplayBox.h" />
     <ClInclude Include="Controls\DisplayPage.h" />
+    <ClInclude Include="Controls\DropDown.h" />
     <ClInclude Include="Controls\Frame.h" />
     <ClInclude Include="Controls\Pages\ButtonPage.h" />
     <ClInclude Include="Controls\Pages\MainPage.h" />
